# taskiq

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  tox.ini  tox.toml  vuepress.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: relator.yml  release.yml  release_docs.yaml  release_docs_test.yaml  test.yml  testwf.yml
docs/: README.md  contrib.md  index.md
docs/.vuepress/: config.ts
docs/.vuepress/styles/: config.scss  index.scss  palette.scss
docs/available-components/: README.md  brokers.md  middlewares.md  result-backends.md  schedule-sources.md
docs/examples/batching/: inmemory_batch.py  redis_batch.py
docs/examples/dynamics/: dyn_broker.py  dyn_receiver.py  dyn_scheduler.py  receiver.py  scheduler.py
docs/examples/extending/: broker.py  cli.py  middleware_async.py  middleware_sync.py  result_backend.py  schedule_source.py
docs/examples/introduction/: aio_pika_broker.py  full_example.py  inmemory_run.py
docs/examples/router/: multi_broker_worker.py  multiple_brokers.py  shared_task_package.py
docs/examples/schedule/: intro.py  redis_schedule.py  without_schedule.py
docs/examples/state/: async_generator_deps.py  async_generator_deps_annot.py  class_dependency.py  class_dependency_annot.py  dependencies_tree.py  generics.py  (+8 more)
docs/extending-taskiq/: README.md  broker.md  cli.md  middleware.md  result-backend.md  resutl-backend.md  schedule-sources.md
docs/framework_integrations/: README.md  faststream.md  taskiq-with-aiogram.md  taskiq-with-aiohttp.md  taskiq-with-fastapi.md
docs/guide/: README.md  architecture-overview.md  available-brokers.md  batching-tasks.md  cli.md  dynamic-brokers.md  getting-started.md  message-format.md  result_backends.md  routing-and-flows.md  scheduling-tasks.md  state-and-deps.md  state-and-events.md  taskiq-with-fastapi.md  testing-taskiq.md
taskiq/: __init__.py  __main__.py  _broker_resources.py  _task_function.py  acks.py  compat.py  context.py  decor.py  dependencies.py  error.py  events.py  exceptions.py  flow.py  funcs.py  instrumentation.py  kicker.py  labels.py  message.py  metrics.py  package.py  queue.py  result.py  router.py  semaphore.py  sending.py  serialization.py  state.py  task.py  task_builder.py  task_creator.py  task_gen.py  types_helpers.py  utils.py  warnings.py
taskiq/abc/: __init__.py  broker.py  broker_factory.py  cmd.py  formatter.py  middleware.py  result_backend.py  schedule_source.py  scheduler_factory.py  serializer.py  stream_result_formatter.py  streamable_result_backend.py
taskiq/api/: __init__.py  receiver.py  scheduler.py
taskiq/brokers/: __init__.py  inmemory_broker.py  inmemory_queue_broker.py  nng_broker.py  shared_broker.py  zmq_broker.py
taskiq/cli/: __init__.py  args.py  async_task_runner.py  common_args.py  log_collector.py  params_parser.py  receiver.py  runner.py  task_runner.py  utils.py  watcher.py  worker.py
taskiq/depends/: progress_tracker.py  task_idler.py
taskiq/errors/: __init__.py  errors.py
taskiq/formatters/: __init__.py  json_formatter.py  proxy_formatter.py
taskiq/health/: __init__.py  heartbeat.py  middleware.py  server.py
taskiq/middlewares/: __init__.py  functionalized_retry_middleware.py  opentelemetry_middleware.py  prometheus_middleware.py  retry_middleware.py  simple_retry_middleware.py  smart_retry_middleware.py  stat_middleware.py  taskiq_admin_middleware.py
taskiq/plugins/: __init__.py  json_formatter.py
taskiq/receiver/: __init__.py  async_task_runner.py  batcher.py  observer.py  params_parser.py  receiver.py  runtime.py
taskiq/result/: __init__.py  result.py  v1.py  v2.py
taskiq/result_backends/: __init__.py  dummy.py
taskiq/routing/: __init__.py  dispatcher.py  models.py  references.py  registries.py  routes.py  subscriptions.py
taskiq/schedule_sources/: __init__.py  label_based.py
taskiq/scheduler/: __init__.py  created_schedule.py  merge_functions.py  scheduled_task.py  scheduler.py
taskiq/serializers/: __init__.py  cbor_serializer.py  json_serializer.py  msgpack_serializer.py  orjson_serializer.py  pickle.py
taskiq/tests/: test_funcs.py  test_stub.py
tests/: conftest.py  result.py  serialization.py  test_acks.py  test_batch_config.py  test_brokers.py  test_dependencies.py  test_error.py  test_exceptions_flow.py  test_funcs.py  test_metrics.py  test_requeue.py  test_result.py  test_retry_task.py  test_router.py  test_semaphore.py  test_serialization.py  test_state.py  test_task.py  test_task_builder.py  test_utils.py  utils.py
tests/abc/: test_broker.py
tests/api/: test_receiver_task.py  test_scheduler.py
tests/brokers/: inmemory_contract_support.py  test_inmemory.py  test_inmemory_lifecycle.py  test_inmemory_send.py  test_nng_broker.py
tests/cli/: test_utils.py
tests/depends/: test_progress_tracker.py  test_task_idler.py
tests/formatters/: test_json_formatter.py  test_proxy_formatter.py
tests/middlewares/: test_hooks.py  test_simple_retry.py  test_task_retry.py  test_taskiq_admin_middleware.py
tests/opentelemetry/: taskiq_test_tasks.py  test_auto_instrumentation.py  test_duplicate.py  test_helpers.py  test_metrics.py  test_tasks.py
tests/receiver/: conftest.py  receiver_lifecycle_support.py  receiver_listener_support.py  runtime_support.py  test_batch_callback.py  test_batcher.py  test_lifecycle_faults.py  test_params_parser.py  test_receiver.py  test_receiver_lifecycle.py  test_receiver_listener.py  test_receiver_middlewares.py  test_runtime.py  test_runtime_faults.py
tests/routing/: models.py  test_dispatch.py  test_router_core.py  test_send_lifecycle.py  test_shared_tasks.py  test_subscriptions.py
tests/schedule_sources/: test_label_based.py
tests/scheduler/: test_cron_offset_roundtrip.py  test_interval_performance.py  test_interval_validation.py  test_label_based_sched.py  test_merge_funcs.py  test_scheduled_task.py  test_scheduler.py  test_scheduling_identity.py
tests/serializers/: test_json_serializer.py  test_serializers.py
(+58 files in other folders)
